# OPACK

./: .gitignore  CMakeLists.txt  CMakePresets.json  Folder.DotSettings  README.md  TODO.md
benchmarks/: CMakeLists.txt  basic.cpp  utils.hpp
benchmarks/core/: action.cpp  perception.cpp  world.cpp
benchmarks/module/: agents.cpp
benchmarks/tools/: run_benchmarks.py
benchmarks/utils/: ring_buffer.cpp
cmake/: FindCPM.cmake  cpm.cmake  target_default_compile_options.cmake  target_set_compile_warnings.cmake
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  conf.py  index.md
docs/pages/: about.dox
examples/: 00_empty.cpp  01_simple_agent.cpp  01_simulation_controls.cpp  02_activity.cpp  02_world.cpp  03_simple_agent.cpp  05_perception.cpp  06_action.cpp  CMakeLists.txt  console.cpp  empty_sim.hpp  manual_console.cpp  simple_sim.hpp  test_bench.cpp
examples/04_activity/: state.flecs
examples/05_perception/: main.cpp  state.flecs
examples/include/opack/examples/: all.hpp  empty_sim.hpp  medical_sim.hpp  simple_sim.hpp
examples/plecs/: activity.flecs  simple_agent.flecs
experiments/: CMakeLists.txt
experiments/01_sensibility/: 01_sensibility.cpp  CMakeLists.txt  configuration.flecs  main.cpp
experiments/02_shelling/: CMakeLists.txt  benchmark.cpp  main.cpp
experiments/02_shelling/model/: model.txt  model_ref.txt
experiments/02_shelling/src/: display.hpp  environment.hpp  identifiers.hpp  model.hpp
include/html/: core_8hpp_source.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_f32ba3bd73e43e9349e2df5f3641f98d.html  files.html  index.html  md__d__dev_cpp__o_p_a_c_k_docs_index.html  pages.html
include/html/search/: all_0.js  searchdata.js
include/latex/: core_8hpp_source.tex  files.tex  index.tex  md__d__dev_cpp__o_p_a_c_k_docs_index.tex  refman.tex
include/opack/: core.hpp
include/opack/algorithm/: influence_graph.hpp
include/opack/core/: action.hpp  api_types.hpp  common.hpp  communication.hpp  components.hpp  entity.hpp  macros.hpp  operation.hpp  perception.hpp  simulation.hpp  types.hpp  world.hpp
include/opack/module/: activity_dl.hpp  adl.hpp  agents.hpp  core.hpp  fipa_acl.hpp  flows.hpp  simple_agent.hpp
include/opack/module/adl/: api.hpp  components.hpp  types.hpp
include/opack/operations/: basic.hpp  influence_graph.hpp
include/opack/strategy/: basic.hpp  influence_graph.hpp
include/opack/utils/: assert.hpp  debug.hpp  flecs_helper.hpp  ring_buffer.hpp  simulation_template.hpp  type_map.hpp  type_name.hpp
src/: CMakeLists.txt  OPACK.cpp  OPACK.h  core.cpp
src/core/: communication.cpp  perception.cpp  presentation.cpp  simulation.cpp  world.cpp
src/module/: activity_dl.cpp  core.cpp  fipa_acl.cpp
src/utils/: simulation_template.cpp
tests/: CMakeLists.txt  main.cpp  operation.cpp  simulation.cpp  utils.hpp
tests/algorithm/: influence_graph.cpp
tests/core/: action.cpp  basic.cpp  communication.cpp  operation.cpp  perception.cpp  simulation.cpp  types.cpp  world.cpp
tests/module/: activity_dl.cpp  fipa_acl.cpp
tests/utils/: ring_buffer.cpp
